--- a/package.json
+++ b/package.json
@@ -1,35 +1,40 @@
 {
   "name": "node-js",
   "version": "1.0.0",
-  "description": "gayscription",
-  "main": "server.js",
+  "description": "",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/YauhenKavalchuk/node-js.git"
+    "url": ""
   },
   "author": "drl1ng",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/YauhenKavalchuk/node-js/issues"
+    "url": "/"
   },
-  "homepage": "https://github.com/YauhenKavalchuk/node-js#readme",
+  "homepage": "",
   "devDependencies": {
-    "nodemon": "^2.0.21"
+    "nodemon": "^2.0.7"
   },
   "dependencies": {
-    "chalk": "^4.1.1",
-    "dotenv": "^10.0.0",
-    "ejs": "^3.1.8",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
+    "express-validator": "^6.15.0",
+    "formidable": "^2.1.1",
+    "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
-    "mongoose": "^5.13.16",
-    "morgan": "^1.10.0"
-  },
-  "engines": {
-    "node": "19.7.0"
+    "mongoose": "^5.12.7",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "node-telegram-bot-api": "0.61.0",
+    "request": "^2.88.2"
   }
 }
