--- a/package.json
+++ b/package.json
@@ -1,28 +1,16 @@
 {
   "name": "node-js",
   "version": "1.0.0",
-  "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": ""
-  },
-  "author": "drl1ng",
+  "author": "drl1nq",
   "license": "ISC",
-  "bugs": {
-    "url": "/"
-  },
-  "homepage": "",
-  "devDependencies": {
-    "nodemon": "^2.0.7"
-  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
@@ -35,6 +23,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "node-telegram-bot-api": "0.61.0",
-    "request": "^2.88.2"
+    "nodemon": "^2.0.7",
+    "request": "^2.88.2",
+    "xmlhttprequest": "^1.8.0"
   }
 }
